[build-system]
requires = ["setuptools>=61.0.0,<62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cba_core_lib"
version = "1.0.20"
description = "Core library for CBA microservices"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "CBA Team", email = "cbotee@proton.me" }
]
maintainers = [
    { name = "CBA", email = "cbotee@proton.me" }
]
keywords = ["cba", "library", "shared", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "kafka-python>=2.0.2",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.4",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.3",
    "pydantic[email]>=2.4.2",
    "minio>=7.2.15",
    "tenacity>=9.1.2",
]

[project.urls]
Homepage = "https://github.com/hokushin118/cba-core-lib"
Repository = "https://github.com/hokushin118/cba-core-lib"
"Bug Tracker" = "https://github.com/hokushin118/cba-core-lib/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio==0.21.1",
    "pytest-sugar==0.9.7",
    "pytest-cov==6.1.1",
    "pytest-integration-mark==0.2.0",
    "testcontainers==4.9.2",
    "testcontainers-minio==0.0.1rc1",
]
dev = [
    "cba_core_lib[test]",
    "kafka-python>=2.0.6",
    "pylint>=2.14.0,<3",
    "flake8>=4.0.1,<5",
    "black>=23.0,<25",
    "pre-commit>=3.0,<5",
    "build>=1.0,<2",
    "twine>=4.0,<6",
    "pydantic[email]==2.4.2",
    "pydantic-settings==2.0.3",
    "minio==7.2.15",
    "tenacity==9.1.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cba_core_lib*"]
exclude = ["tests*", "tests.*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
cba_core_lib = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=cba_core_lib --cov-report=term-missing --cov-branch"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cba_core_lib"]
branch = true

[tool.coverage.report]
omit = ["tests/*", "*/__init__.py"]
show_missing = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "import-error",
    "too-few-public-methods",
    "too-many-arguments",
    "fixme",
    "E1101",
    "R0913",
    "R0903",
    "R0902",
    "W0212",
    "R0801",
    "W0621",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]